--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -164,9 +164,11 @@
   {
    "cell_type": "markdown",
    "id": "826edf73-63a3-4e9e-818c-968e05beccb4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Preparing the data "
+    "## Preparing the data "
    ]
   },
   {
@@ -237,8 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.05)\n",
-    "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.05)\n",
+    "labels_train = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/train/train.xml\", min_coverage=0.15)\n",
+    "labels_test  = parse_destroyed_with_size_check(\"../EIDSeg_Dataset/data/test/test.xml\",  min_coverage=0.15)\n",
     "\n",
     "X_train_org, ordered_filenames_train = load_and_resize_images(\"../EIDSeg_Dataset/data/train/images/default\", target_size=(64,64))\n",
     "X_test_org,  ordered_filenames_test  = load_and_resize_images(\"../EIDSeg_Dataset/data/test/images/default\",  target_size=(64,64))\n",
@@ -249,6 +251,451 @@
     "# quick sanity checks\n",
     "print(\"Train positive ratio:\", Y_train_org.mean(), \"n_train:\", Y_train_org.shape[0])\n",
     "print(\"Test  positive ratio:\", Y_test_org.mean(),  \"n_test:\",  Y_test_org.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "514fcc2a-3384-4eff-bbd6-4b85621da148",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## DNN structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb6d114-bab9-4532-97e2-dda1b055a557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def initialize_parameters_deep(layer_dims):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "    layer_dims -- python array (list) containing the dimensions of each layer in our network\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
+    "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
+    "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(1)\n",
+    "    parameters = {}\n",
+    "    L = len(layer_dims)            # number of layers in the network\n",
+    "\n",
+    "    for l in range(1, L):\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1]) / np.sqrt(layer_dims[l-1]) #*0.01\n",
+    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
+    "        \n",
+    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
+    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
+    "\n",
+    "        \n",
+    "    return parameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e1414e3-b801-4df4-9096-34c5028fa255",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_forward(A, W, b):\n",
+    "    \"\"\"\n",
+    "    Implement the linear part of a layer's forward propagation.\n",
+    "\n",
+    "    Arguments:\n",
+    "    A -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "\n",
+    "    Returns:\n",
+    "    Z -- the input of the activation function, also called pre-activation parameter \n",
+    "    cache -- a python dictionary containing \"A\", \"W\" and \"b\" ; stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Z = W.dot(A) + b\n",
+    "    \n",
+    "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
+    "    cache = (A, W, b)\n",
+    "    \n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ac605c7-2b7f-4f18-a0b2-a1bc5ee31a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def linear_activation_forward(A_prev, W, b, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation for the LINEAR->ACTIVATION layer\n",
+    "\n",
+    "    Arguments:\n",
+    "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "\n",
+    "    Returns:\n",
+    "    A -- the output of the activation function, also called the post-activation value \n",
+    "    cache -- a python dictionary containing \"linear_cache\" and \"activation_cache\";\n",
+    "             stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if activation == \"sigmoid\":\n",
+    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "    \n",
+    "    elif activation == \"relu\":\n",
+    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = relu(Z)\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"\\033[91mError! Please make sure you have passed the value correctly in the \\\"activation\\\" parameter\")\n",
+    "    \n",
+    "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "\n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0138577f-62a8-4f82-9fb6-aeecf57e1662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def L_model_forward(X, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data, numpy array of shape (input size, number of examples)\n",
+    "    parameters -- output of initialize_parameters_deep()\n",
+    "    \n",
+    "    Returns:\n",
+    "    AL -- last post-activation value\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_relu_forward() (there are L-1 of them, indexed from 0 to L-2)\n",
+    "                the cache of linear_sigmoid_forward() (there is one, indexed L-1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    L = len(parameters) // 2                  # number of layers in the neural network\n",
+    "    \n",
+    "    # Implement [LINEAR -> RELU]*(L-1). Add \"cache\" to the \"caches\" list.\n",
+    "    for l in range(1, L):\n",
+    "        A_prev = A \n",
+    "        A, cache = linear_activation_forward(A_prev, parameters['W' + str(l)], parameters['b' + str(l)], activation = \"relu\")\n",
+    "        caches.append(cache)\n",
+    "    \n",
+    "    # Implement LINEAR -> SIGMOID. Add \"cache\" to the \"caches\" list.\n",
+    "    AL, cache = linear_activation_forward(A, parameters['W' + str(L)], parameters['b' + str(L)], activation = \"sigmoid\")\n",
+    "    caches.append(cache)\n",
+    "    \n",
+    "    assert(AL.shape == (1,X.shape[1]))\n",
+    "            \n",
+    "    return AL, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0492c074-eede-494c-8c2f-35b0ebe8e13a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(AL, Y):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function defined by equation (7).\n",
+    "\n",
+    "    Arguments:\n",
+    "    AL -- probability vector corresponding to your label predictions, shape (1, number of examples)\n",
+    "    Y -- true \"label\" vector (for example: containing 0 if non-cat, 1 if cat), shape (1, number of examples)\n",
+    "\n",
+    "    Returns:\n",
+    "    cost -- cross-entropy cost\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = Y.shape[1]\n",
+    "\n",
+    "    # Compute loss from aL and y.\n",
+    "    cost = (1./m) * (-np.dot(Y,np.log(AL).T) - np.dot(1-Y, np.log(1-AL).T))\n",
+    "    \n",
+    "    cost = np.squeeze(cost)      # To make sure your cost's shape is what we expect (e.g. this turns [[17]] into 17).\n",
+    "    assert(cost.shape == ())\n",
+    "    \n",
+    "    return cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99acf980-6152-4f51-8707-80bd2e0479b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def linear_backward(dZ, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the linear portion of backward propagation for a single layer (layer l)\n",
+    "\n",
+    "    Arguments:\n",
+    "    dZ -- Gradient of the cost with respect to the linear output (of current layer l)\n",
+    "    cache -- tuple of values (A_prev, W, b) coming from the forward propagation in the current layer\n",
+    "\n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "\n",
+    "    dW = 1./m * np.dot(dZ,A_prev.T)\n",
+    "    db = 1./m * np.sum(dZ, axis = 1, keepdims = True)\n",
+    "    dA_prev = np.dot(W.T,dZ)\n",
+    "    \n",
+    "    assert (dA_prev.shape == A_prev.shape)\n",
+    "    assert (dW.shape == W.shape)\n",
+    "    assert (db.shape == b.shape)\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ace1016-db58-4957-a382-db20014e1d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient for current layer l \n",
+    "    cache -- tuple of values (linear_cache, activation_cache) we store for computing backward propagation efficiently\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        \n",
+    "    elif activation == \"sigmoid\":\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"\\033[91mError! Please make sure you have passed the value correctly in the \\\"activation\\\" parameter\")\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e48e586-500e-4edf-b40f-b4b8b15dfad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def L_model_backward(AL, Y, caches):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    \n",
+    "    Arguments:\n",
+    "    AL -- probability vector, output of the forward propagation (L_model_forward())\n",
+    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() with \"relu\" (there are (L-1) or them, indexes from 0 to L-2)\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (there is one, index L-1)\n",
+    "    \n",
+    "    Returns:\n",
+    "    grads -- A dictionary with the gradients\n",
+    "             grads[\"dA\" + str(l)] = ... \n",
+    "             grads[\"dW\" + str(l)] = ...\n",
+    "             grads[\"db\" + str(l)] = ... \n",
+    "    \"\"\"\n",
+    "    grads = {}\n",
+    "    L = len(caches) # the number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
+    "    \n",
+    "    # Initializing the backpropagation\n",
+    "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    \n",
+    "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"AL, Y, caches\". Outputs: \"grads[\"dAL\"], grads[\"dWL\"], grads[\"dbL\"]\n",
+    "    current_cache = caches[L-1]\n",
+    "    grads[\"dA\" + str(L-1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, activation = \"sigmoid\")\n",
+    "    \n",
+    "    for l in reversed(range(L-1)):\n",
+    "        # lth layer: (RELU -> LINEAR) gradients.\n",
+    "        current_cache = caches[l]\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 1)], current_cache, activation = \"relu\")\n",
+    "        grads[\"dA\" + str(l)] = dA_prev_temp\n",
+    "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
+    "        grads[\"db\" + str(l + 1)] = db_temp\n",
+    "\n",
+    "    return grads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74dfc553-78f5-4b0e-954b-29a82beeddf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_parameters(parameters, grads, learning_rate):\n",
+    "    \"\"\"\n",
+    "    Update parameters using gradient descent\n",
+    "    \n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing your parameters \n",
+    "    grads -- python dictionary containing your gradients, output of L_model_backward\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your updated parameters \n",
+    "                  parameters[\"W\" + str(l)] = ... \n",
+    "                  parameters[\"b\" + str(l)] = ...\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    L = len(parameters) // 2 # number of layers in the neural network\n",
+    "\n",
+    "    # Update rule for each parameter. Use a for loop.\n",
+    "    for l in range(L):\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * grads[\"dW\" + str(l+1)]\n",
+    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate * grads[\"db\" + str(l+1)]\n",
+    "        \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f58f82e1-f64a-491d-8d38-f439cf68d5fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def predict(X, y, parameters):\n",
+    "    \"\"\"\n",
+    "    This function is used to predict the results of a  L-layer neural network.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data set of examples you would like to label\n",
+    "    parameters -- parameters of the trained model\n",
+    "    \n",
+    "    Returns:\n",
+    "    p -- predictions for the given dataset X\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = X.shape[1]\n",
+    "    n = len(parameters) // 2 # number of layers in the neural network\n",
+    "    p = np.zeros((1,m))\n",
+    "    \n",
+    "    # Forward propagation\n",
+    "    probas, caches = L_model_forward(X, parameters)\n",
+    "\n",
+    "    \n",
+    "    # convert probas to 0/1 predictions\n",
+    "    for i in range(0, probas.shape[1]):\n",
+    "        if probas[0,i] > 0.5:\n",
+    "            p[0,i] = 1\n",
+    "        else:\n",
+    "            p[0,i] = 0\n",
+    "    \n",
+    "    #print results\n",
+    "    #print (\"predictions: \" + str(p))\n",
+    "    #print (\"true labels: \" + str(y))\n",
+    "    print(\"Accuracy: \"  + str(np.sum((p == y)/m)))\n",
+    "        \n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "059cb6e9-f824-43b2-8ed3-b4483d7e746c",
+   "metadata": {},
+   "source": [
+    "## L-layer Neural Network\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e746df3-1539-452d-b594-1c834d839d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def L_layer_model(X, Y, layers_dims, learning_rate = 0.0075, num_iterations = 3000, print_cost=False):\n",
+    "    \"\"\"\n",
+    "    Implements a L-layer neural network: [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, of shape (n_x, number of examples)\n",
+    "    Y -- true \"label\" vector (containing 1 if cat, 0 if non-cat), of shape (1, number of examples)\n",
+    "    layers_dims -- list containing the input size and each layer size, of length (number of layers + 1).\n",
+    "    learning_rate -- learning rate of the gradient descent update rule\n",
+    "    num_iterations -- number of iterations of the optimization loop\n",
+    "    print_cost -- if True, it prints the cost every 100 steps\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- parameters learnt by the model. They can then be used to predict.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    np.random.seed(1)\n",
+    "    costs = []                         # keep track of cost\n",
+    "    \n",
+    "    # Parameters initialization.\n",
+    "\n",
+    "    parameters = initialize_parameters_deep(layers_dims)\n",
+    "        \n",
+    "    # Loop (gradient descent)\n",
+    "    for i in range(0, num_iterations):\n",
+    "\n",
+    "        # Forward propagation: [LINEAR -> RELU]*(L-1) -> LINEAR -> SIGMOID.\n",
+    "        AL, caches = L_model_forward(X, parameters)\n",
+    "                \n",
+    "        # Compute cost.\n",
+    "        cost = compute_cost(AL,Y)\n",
+    "            \n",
+    "        # Backward propagation.\n",
+    "        grads = L_model_backward(AL, Y, caches)\n",
+    "        \n",
+    "        # Update parameters.\n",
+    "\n",
+    "        parameters = update_parameters(parameters, grads, learning_rate)\n",
+    "                        \n",
+    "        # Print the cost every 100 iterations and for the last iteration\n",
+    "        if print_cost and (i % 100 == 0 or i == num_iterations - 1):\n",
+    "            print(\"Cost after iteration {}: {}\".format(i, np.squeeze(cost)))\n",
+    "        if i % 100 == 0:\n",
+    "            costs.append(cost)\n",
+    "    \n",
+    "    return parameters, costs"
    ]
   }
  ],
