--- a/notebooks/4_Optimized_Model.ipynb
+++ b/notebooks/4_Optimized_Model.ipynb
@@ -891,18 +891,382 @@
    ],
    "source": [
     "print(\"Train \", end= \":\")\n",
-    "pred_train = predict(train_x, Y_train_org, parameters)\n",
+    "pred_train = predict(train_x, train_y, parameters)\n",
     "print(\"Test \",end= \":\")\n",
-    "pred_test = predict(test_x, Y_test_org, parameters)"
+    "pred_test = predict(test_x, test_y, parameters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dffd03a-353a-4541-8fa4-a6227c1f761e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Mini-Batch Gradient Descent"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd80aa1-daf5-4417-a112-37a2e965aba2",
+   "id": "5e63f39f-c2d9-4b0e-b1e1-ccad3531e25a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# GRADED FUNCTION: random_mini_batches\n",
+    "\n",
+    "def random_mini_batches(X, Y, mini_batch_size = 64, seed = 0):\n",
+    "    \"\"\"\n",
+    "    Creates a list of random minibatches from (X, Y)\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, of shape (input size, number of examples)\n",
+    "    Y -- true \"label\" vector (1 for blue dot / 0 for red dot), of shape (1, number of examples)\n",
+    "    mini_batch_size -- size of the mini-batches, integer\n",
+    "    \n",
+    "    Returns:\n",
+    "    mini_batches -- list of synchronous (mini_batch_X, mini_batch_Y)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(seed)            # To make your \"random\" minibatches the same as ours\n",
+    "    m = X.shape[1]                  # number of training examples\n",
+    "    mini_batches = []\n",
+    "        \n",
+    "    # Step 1: Shuffle (X, Y)\n",
+    "    permutation = list(np.random.permutation(m))\n",
+    "    shuffled_X = X[:, permutation]\n",
+    "    shuffled_Y = Y[:, permutation].reshape((1, m))\n",
+    "    \n",
+    "    inc = mini_batch_size\n",
+    "\n",
+    "    # Step 2 - Partition (shuffled_X, shuffled_Y).\n",
+    "    # Cases with a complete mini batch size only i.e each of 64 examples.\n",
+    "    num_complete_minibatches = math.floor(m / mini_batch_size) # number of mini batches of size mini_batch_size in your partitionning\n",
+    "    start_index= 0\n",
+    "    for k in range(0, num_complete_minibatches):\n",
+    "        # (approx. 2 lines)\n",
+    "        # mini_batch_X =  \n",
+    "        # mini_batch_Y =\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        start_index= k*inc\n",
+    "        mini_batch_X = shuffled_X[:,start_index: start_index+inc ]\n",
+    "        mini_batch_Y = shuffled_Y[:,start_index: start_index+inc ]\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
+    "        mini_batches.append(mini_batch)\n",
+    "    \n",
+    "    # For handling the end case (last mini-batch < mini_batch_size i.e less than 64)\n",
+    "    if m % mini_batch_size != 0:\n",
+    "        #(approx. 2 lines)\n",
+    "        # mini_batch_X =\n",
+    "        # mini_batch_Y =\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        start_index= num_complete_minibatches*inc\n",
+    "        mini_batch_X = shuffled_X[:,start_index: start_index+(m % mini_batch_size) ]\n",
+    "        mini_batch_Y = shuffled_Y[:,start_index: start_index+(m % mini_batch_size) ]\n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
+    "        mini_batches.append(mini_batch)\n",
+    "    \n",
+    "    return mini_batches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ad6d16c-9429-41ea-890b-fddaf96a9436",
+   "metadata": {},
+   "source": [
+    "## Let's try Mini-Batch with Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "452680fc-57db-4be3-94c5-a9c8e4078922",
+   "metadata": {},
+   "source": [
+    "### Adam structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea255da2-a69d-4aaa-a60b-55796360a322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_adam\n",
+    "\n",
+    "def initialize_adam(parameters) :\n",
+    "    \"\"\"\n",
+    "    Initializes v and s as two python dictionaries with:\n",
+    "                - keys: \"dW1\", \"db1\", ..., \"dWL\", \"dbL\" \n",
+    "                - values: numpy arrays of zeros of the same shape as the corresponding gradients/parameters.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing your parameters.\n",
+    "                    parameters[\"W\" + str(l)] = Wl\n",
+    "                    parameters[\"b\" + str(l)] = bl\n",
+    "    \n",
+    "    Returns: \n",
+    "    v -- python dictionary that will contain the exponentially weighted average of the gradient. Initialized with zeros.\n",
+    "                    v[\"dW\" + str(l)] = ...\n",
+    "                    v[\"db\" + str(l)] = ...\n",
+    "    s -- python dictionary that will contain the exponentially weighted average of the squared gradient. Initialized with zeros.\n",
+    "                    s[\"dW\" + str(l)] = ...\n",
+    "                    s[\"db\" + str(l)] = ...\n",
+    "\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    L = len(parameters) // 2 # number of layers in the neural networks\n",
+    "    v = {}\n",
+    "    s = {}\n",
+    "    \n",
+    "    # Initialize v, s. Input: \"parameters\". Outputs: \"v, s\".\n",
+    "    for l in range(1, L + 1):\n",
+    "    # (approx. 4 lines)\n",
+    "        # v[\"dW\" + str(l)] = ...\n",
+    "        # v[\"db\" + str(l)] = ...\n",
+    "        # s[\"dW\" + str(l)] = ...\n",
+    "        # s[\"db\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        v[\"dW\" + str(l)] = np.zeros(parameters[\"W\"+str(l)].shape)\n",
+    "        v[\"db\" + str(l)] = np.zeros(parameters[\"b\"+str(l)].shape)\n",
+    "        s[\"dW\" + str(l)] = np.zeros(parameters[\"W\"+str(l)].shape)\n",
+    "        s[\"db\" + str(l)] = np.zeros(parameters[\"b\"+str(l)].shape)\n",
+    "    \n",
+    "    # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    return v, s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5444bba-3131-426c-a715-2da5699474dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: update_parameters_with_adam\n",
+    "\n",
+    "def update_parameters_with_adam(parameters, grads, v, s, t, learning_rate = 0.01,\n",
+    "                                beta1 = 0.9, beta2 = 0.999,  epsilon = 1e-8):\n",
+    "    \"\"\"\n",
+    "    Update parameters using the Adam optimization algorithm.\n",
+    "\n",
+    "    Arguments:\n",
+    "    parameters -- python dictionary containing your parameters:\n",
+    "                    parameters['W' + str(l)] = Wl\n",
+    "                    parameters['b' + str(l)] = bl\n",
+    "    grads -- python dictionary containing your gradients for each parameter:\n",
+    "                    grads['dW' + str(l)] = dWl\n",
+    "                    grads['db' + str(l)] = dbl\n",
+    "    v -- Adam variable, moving average of the first gradient, maintained as a python dictionary\n",
+    "    s -- Adam variable, moving average of the squared gradient, maintained as a python dictionary\n",
+    "    t -- Adam variable, counts the number of steps taken for bias correction\n",
+    "    learning_rate -- learning rate, scalar\n",
+    "    beta1 -- exponential decay hyperparameter for the first moment estimates\n",
+    "    beta2 -- exponential decay hyperparameter for the second moment estimates\n",
+    "    epsilon -- hyperparameter to prevent division by zero in the Adam update, a small scalar\n",
+    "\n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your updated parameters\n",
+    "    v -- updated Adam variable, moving average of the first gradient, python dictionary\n",
+    "    s -- updated Adam variable, moving average of the squared gradient, python dictionary\n",
+    "    v_corrected -- python dictionary containing bias-corrected first moment estimates\n",
+    "    s_corrected -- python dictionary containing bias-corrected second moment estimates\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    L = len(parameters) // 2                 # number of layers in the neural networks\n",
+    "    v_corrected = {}                         # Initializing first moment estimate, python dictionary\n",
+    "    s_corrected = {}                         # Initializing second moment estimate, python dictionary\n",
+    "    \n",
+    "    # Perform Adam update on all parameters\n",
+    "    for l in range(1, L + 1):\n",
+    "        # Moving average of the gradients. Inputs: \"v, grads, beta1\". Output: \"v\".\n",
+    "        # (approx. 2 lines)\n",
+    "        # v[\"dW\" + str(l)] = ...\n",
+    "        # v[\"db\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        v[\"dW\" + str(l)] = beta1*v[\"dW\" + str(l)] + (1-beta1)*grads[\"dW\"+str(l)]\n",
+    "        v[\"db\" + str(l)] = beta1*v[\"db\" + str(l)] + (1-beta1)*grads[\"db\"+str(l)]\n",
+    "        \n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "        # Compute bias-corrected first moment estimate. Inputs: \"v, beta1, t\". Output: \"v_corrected\".\n",
+    "        # (approx. 2 lines)\n",
+    "        # v_corrected[\"dW\" + str(l)] = ...\n",
+    "        # v_corrected[\"db\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        v_corrected[\"dW\" + str(l)] = v[\"dW\" + str(l)]/(1-beta1**t)\n",
+    "        v_corrected[\"db\" + str(l)] = v[\"db\" + str(l)]/(1-beta1**t)\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "        # Moving average of the squared gradients. Inputs: \"s, grads, beta2\". Output: \"s\".\n",
+    "        #(approx. 2 lines)\n",
+    "        # s[\"dW\" + str(l)] = ...\n",
+    "        # s[\"db\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        s[\"dW\" + str(l)] = beta2*s[\"dW\" + str(l)] + (1-beta2)*np.square(grads[\"dW\"+str(l)])\n",
+    "        s[\"db\" + str(l)] = beta2*s[\"db\" + str(l)] + (1-beta2)*np.square(grads[\"db\"+str(l)])\n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "        # Compute bias-corrected second raw moment estimate. Inputs: \"s, beta2, t\". Output: \"s_corrected\".\n",
+    "        # (approx. 2 lines)\n",
+    "        # s_corrected[\"dW\" + str(l)] = ...\n",
+    "        # s_corrected[\"db\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        s_corrected[\"dW\" + str(l)] = s[\"dW\" + str(l)]/(1-beta2**t)\n",
+    "        s_corrected[\"db\" + str(l)] = s[\"db\" + str(l)]/(1-beta2**t)\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "        # Update parameters. Inputs: \"parameters, learning_rate, v_corrected, s_corrected, epsilon\". Output: \"parameters\".\n",
+    "        # (approx. 2 lines)\n",
+    "        # parameters[\"W\" + str(l)] = ...\n",
+    "        # parameters[\"b\" + str(l)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        parameters[\"W\" + str(l)] -= learning_rate*(v_corrected[\"dW\" + str(l)]/(np.sqrt(s_corrected[\"dW\" + str(l)])+epsilon))\n",
+    "        parameters[\"b\" + str(l)] -= learning_rate*(v_corrected[\"db\" + str(l)]/(np.sqrt(s_corrected[\"db\" + str(l)])+epsilon))\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "    return parameters, v, s, v_corrected, s_corrected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8f0abe-111f-41ec-9975-1ca8ba52ec03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(X, Y, layers_dims, optimizer, learning_rate = 0.0007, mini_batch_size = 64, beta = 0.9,\n",
+    "          beta1 = 0.9, beta2 = 0.999,  epsilon = 1e-8, num_epochs = 5000, print_cost = True):\n",
+    "    \"\"\"\n",
+    "    3-layer neural network model which can be run in different optimizer modes.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- input data, of shape (2, number of examples)\n",
+    "    Y -- true \"label\" vector (1 for blue dot / 0 for red dot), of shape (1, number of examples)\n",
+    "    optimizer -- the optimizer to be passed, gradient descent, momentum or adam\n",
+    "    layers_dims -- python list, containing the size of each layer\n",
+    "    learning_rate -- the learning rate, scalar.\n",
+    "    mini_batch_size -- the size of a mini batch\n",
+    "    beta -- Momentum hyperparameter\n",
+    "    beta1 -- Exponential decay hyperparameter for the past gradients estimates \n",
+    "    beta2 -- Exponential decay hyperparameter for the past squared gradients estimates \n",
+    "    epsilon -- hyperparameter preventing division by zero in Adam updates\n",
+    "    num_epochs -- number of epochs\n",
+    "    print_cost -- True to print the cost every 1000 epochs\n",
+    "\n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your updated parameters \n",
+    "    \"\"\"\n",
+    "\n",
+    "    L = len(layers_dims)             # number of layers in the neural networks\n",
+    "    costs = []                       # to keep track of the cost\n",
+    "    t = 0                            # initializing the counter required for Adam update\n",
+    "    seed = 10                        # For grading purposes, so that your \"random\" minibatches are the same as ours\n",
+    "    m = X.shape[1]                   # number of training examples\n",
+    "    \n",
+    "    # Initialize parameters\n",
+    "    parameters = initialize_parameters(layers_dims)\n",
+    "\n",
+    "    # Initialize the optimizer\n",
+    "    if optimizer == \"gd\":\n",
+    "        pass # no initialization required for gradient descent\n",
+    "    elif optimizer == \"momentum\":\n",
+    "        v = initialize_velocity(parameters)\n",
+    "    elif optimizer == \"adam\":\n",
+    "        v, s = initialize_adam(parameters)\n",
+    "    \n",
+    "    # Optimization loop\n",
+    "    for i in range(num_epochs):\n",
+    "        \n",
+    "        # Define the random minibatches. We increment the seed to reshuffle differently the dataset after each epoch\n",
+    "        seed = seed + 1\n",
+    "        minibatches = random_mini_batches(X, Y, mini_batch_size, seed)\n",
+    "        cost_total = 0\n",
+    "        \n",
+    "        for minibatch in minibatches:\n",
+    "\n",
+    "            # Select a minibatch\n",
+    "            (minibatch_X, minibatch_Y) = minibatch\n",
+    "\n",
+    "            # Forward propagation\n",
+    "            a3, caches = forward_propagation(minibatch_X, parameters)\n",
+    "\n",
+    "            # Compute cost and add to the cost total\n",
+    "            cost_total += compute_cost(a3, minibatch_Y)\n",
+    "\n",
+    "            # Backward propagation\n",
+    "            grads = backward_propagation(minibatch_X, minibatch_Y, caches)\n",
+    "\n",
+    "            # Update parameters\n",
+    "            if optimizer == \"gd\":\n",
+    "                parameters = update_parameters_with_gd(parameters, grads, learning_rate)\n",
+    "            elif optimizer == \"momentum\":\n",
+    "                parameters, v = update_parameters_with_momentum(parameters, grads, v, beta, learning_rate)\n",
+    "            elif optimizer == \"adam\":\n",
+    "                t = t + 1 # Adam counter\n",
+    "                parameters, v, s, _, _ = update_parameters_with_adam(parameters, grads, v, s,\n",
+    "                                                               t, learning_rate, beta1, beta2,  epsilon)\n",
+    "        cost_avg = cost_total / m\n",
+    "        \n",
+    "        # Print the cost every 1000 epoch\n",
+    "        if print_cost and i % 1000 == 0:\n",
+    "            print (\"Cost after epoch %i: %f\" %(i, cost_avg))\n",
+    "        if print_cost and i % 100 == 0:\n",
+    "            costs.append(cost_avg)\n",
+    "                \n",
+    "    # plot the cost\n",
+    "    plt.plot(costs)\n",
+    "    plt.ylabel('cost')\n",
+    "    plt.xlabel('epochs (per 100)')\n",
+    "    plt.title(\"Learning rate = \" + str(learning_rate))\n",
+    "    plt.show()\n",
+    "\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d466057-57d7-46be-8e24-bcfc00af8eee",
+   "metadata": {},
+   "source": [
+    "### lets train !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ee5a10d-57f7-418f-82b3-2e97eba00647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers_dims = [12288, 20, 7, 5, 1] \n",
+    "parameters = model(train_x, train_y, layers_dims, optimizer = \"adam\")\n",
+    "# Predict\n",
+    "predictions = predict(train_x, train_y, parameters)\n",
+    "\n",
+    "# Plot decision boundary\n",
+    "plt.title(\"Model with Adam optimization\")\n",
+    "axes = plt.gca()\n",
+    "axes.set_xlim([-1.5,2.5])\n",
+    "axes.set_ylim([-1,1.5])\n",
+    "plot_decision_boundary(lambda x: predict_dec(parameters, x.T), train_X, train_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4d6a8c-0bd5-44f3-9262-19f60c0f07b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = predict(test_x, test_y, parameters)"
+   ]
   }
  ],
  "metadata": {
